--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     ],
     "require": {
         "php-curl-class/php-curl-class": "^8.9",
-      "ext-json": "*"
+      "ext-json": "*",
+        "phpmailer/phpmailer": "^6.2"
     }
 }
